--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,16 +4,11 @@ body{
 }
 
 #table_container {
-    overflow-x: auto;
+    display: block;
+    overflow-x: scroll;
 }
 
-#medium {
-    color: orange;
-}
 
-#high {
-    color: red;
-}
 
 /*When user open website with phone*/
 @media (max-width:600px) {
@@ -85,7 +80,7 @@ body{
     td{
         color: white;
         padding: 10px;
-        border-right: 1px solid white;
+        border-left: 1px solid white;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-size: 1em;
     }
@@ -96,4 +91,26 @@ body{
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-size: 1em;
     }
+}
+
+#lowRisk {
+    color: yellow;
+}
+
+#mediumRisk {
+    color: orange;
+}
+
+#highRisk {
+    color: red;
+}
+
+#sticky {
+    position: sticky;
+    left: 23px;
+    border-left: 1px solid white;
+    border-right: 0;
+    text-align: left;
+    padding: 0;
+    margin: 0;
 }
