--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,9 @@
+* {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+    font-weight: normal;
+}
+
 body{
     text-align: center;
     background: linear-gradient(to right, aqua, rgb(0, 140, 255));
@@ -8,89 +14,30 @@ body{
     overflow-x: scroll;
 }
 
-
-
-/*When user open website with phone*/
-@media (max-width:600px) {
-    div{
-        height: auto;
-        width: 98%;
-        background: rgba(128, 128, 128, 0.2);
-        margin: 0 auto;
-        margin-top: 10%;
-        margin-bottom: 10%;
-    }
-    .title{
-        text-transform: capitalize;
-        text-align: left;
-        color: white;
-        padding-top: 30px;
-        padding-left: 20px;
-        font-size: 1.5em;
-        font-weight: normal;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-    table{
-        padding-top: 30px;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-bottom: 30px;
-    }
-    td{
-        color: white;
-        padding: 10px;
-        border-right: 1px solid white;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 1em;
-    }
-    td:last-child {
-        color: white;
-        padding: 10px;
-        border-right: 0;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 1em;
-    }
+div{
+    height: auto;
+    width: 80%;
+    background: rgba(128, 128, 128, 0.2);
+    margin: 0 auto;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
-
-/*When user open website with PC*/
-@media (min-width:600px) {
-    div{
-        height: auto;
-        width: 80%;
-        background: rgba(128, 128, 128, 0.2);
-        margin: 0 auto;
-        margin-bottom: 5%;
-    }
-    .title{
-        text-transform: capitalize;
-        color: white;
-        padding-top: 2.5%;
-        padding-bottom: 2.5%;
-        padding-left: 20px;
-        font-size: 2.5em;
-        font-weight: normal;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-    table{
-        padding-top: 60px;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-bottom: 60px;
-    }
-    td{
-        color: white;
-        padding: 10px;
-        border-left: 1px solid white;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 1em;
-    }
-    td:last-child {
-        color: white;
-        padding: 10px;
-        border-right: 0;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 1em;
-    }
+.title{
+    text-transform: capitalize;
+    text-align: center;
+    padding-top: 30px;
+    padding-left: 20px;
+    font-size: 1.5em;
+}
+table{
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 30px;
+}
+td{
+    padding: 10px;
+    font-size: 1em;
 }
 
 #lowRisk {
@@ -107,10 +54,40 @@ body{
 
 #sticky {
     position: sticky;
-    left: 23px;
-    border-left: 1px solid white;
-    border-right: 0;
+    left: 40px;
     text-align: left;
     padding: 0;
     margin: 0;
 }
+
+/* The parent element */
+.css-chart {
+    /* The height, which is initially defined in the HTML */
+    height: 20px;
+    /* A little breathing room should there be others items around the chart */
+    margin: 0;
+    /* Remove any padding so we have as much space to work with inside the element */
+    padding: 0;
+    position: relative;
+    /* The chart width, as defined in the HTML */
+    width: var(--widget-size);
+  }
+  
+  /* The unordered list holding the data points, no list styling and no spacing */
+  .line-chart {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .line-segment {
+    background-color: green;
+    bottom: var(--y);
+    height: 3px;
+    left: var(--x);
+    position: absolute;
+    width: calc(var(--hypotenuse) * 1px);
+    transform: rotate(calc(var(--angle) * 1deg));
+    transform-origin: left bottom;
+    width: calc(var(--hypotenuse) * 1px);
+  }
